@@ -1,3 +1,10 @@
+drkns 23.10.2020 22:18:08 +0100 - build 5687
+
+1. Обработка исключений:
+   - перехват std::terminate
+   - альтернативный способ получения стека
+   - вывод регистров.
+
 drkns 22.10.2020 22:17:27 +0100 - build 5686
 
 1. Удалены lng строки для single viewer/editor functional keys.
